--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,113 +1,130 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{wjm-bo,
+author = {Chaney, Lindsay E. and {van Beek}, Anton and Downing, Julia R. and Zhang, Jinrui and Zhang, Hengrui and Hui, Janan and Sorensen, E. Alexander and Khalaj, Maryam and Dunn, Jennifer B. and Chen, Wei and Hersam, Mark C.},
+title = {Bayesian optimization of environmentally sustainable graphene inks produced by wet jet milling},
+journal = {Small},
+year = {2024},
+volume = {0},
+number = {0},
+pages = {2309579},
+html = {https://doi.org/10.1002/smll.202309579},
+pdf = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/smll.202309579},
+preview = {wjm-bo.webp},
+abstract = {Abstract Liquid phase exfoliation (LPE) of graphene is a potentially scalable method to produce conductive graphene inks for printed electronic applications. Among LPE methods, wet jet milling (WJM) is an emerging approach that uses high-speed, turbulent flow to exfoliate graphene nanoplatelets from graphite in a continuous flow manner. Unlike prior WJM work based on toxic, high-boiling-point solvents such as n-methyl-2-pyrollidone (NMP), this study uses the environmentally friendly solvent ethanol and the polymer stabilizer ethyl cellulose (EC). Bayesian optimization and iterative batch sampling are employed to guide the exploration of the experimental phase space (namely, concentrations of graphite and EC in ethanol) in order to identify the Pareto frontier that simultaneously optimizes three performance criteria (graphene yield, conversion rate, and film conductivity). This data-driven strategy identifies vastly different optimal WJM conditions compared to literature precedent, including an optimal loading of 15 wt% graphite in ethanol compared to 1 wt% graphite in NMP. These WJM conditions provide superlative graphene production rates of 3.2 g hr<sup>-1</sup> with the resulting graphene nanoplatelets being suitable for screen-printed micro-supercapacitors. Finally, life cycle assessment reveals that ethanol-based WJM graphene exfoliation presents distinct environmental sustainability advantages for greenhouse gas emissions, fossil fuel consumption, and toxicity.}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+@article{mofml,
+  title = {Automated crystal system identification from electron diffraction patterns using multiview opinion fusion machine learning},
+  author = {Jie Chen and Hengrui Zhang and Carolin B. Wahl and Wei Liu and Chad A. Mirkin and Vinayak P. Dravid and Daniel W. Apley and Wei Chen},
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {120},
+  number = {46},
+  pages = {e2309240120},
+  year = {2023},
+  doi = {10.1073/pnas.2309240120},
+  selected = {true},
+  preview = {MOF-ML.webp},
+  html = {https://www.pnas.org/doi/abs/10.1073/pnas.2309240120},
+  abstract = {A bottleneck in high-throughput nanomaterials discovery is the pace at which new materials can be structurally characterized. Although current machine learning (ML) methods show promise for the automated processing of electron diffraction patterns (DPs), they fail in high-throughput experiments where DPs are collected from crystals with random orientations. Inspired by the human decision-making process, a framework for automated crystal system classification from DPs with arbitrary orientations was developed. A convolutional neural network was trained using evidential deep learning, and the predictive uncertainties were quantified and leveraged to fuse multiview predictions. Using vector map representations of DPs, the framework achieves a testing accuracy of 0.94 in the examples considered, is robust to noise, and retains remarkable accuracy using experimental data. This work highlights the ability of ML to be used to accelerate experimental high-throughput materials data analytics.}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+@article{et-al,
+  title = {ET-AL: Entropy-targeted active learning for bias mitigation in materials data},
+  journal = {Applied Physics Reviews},
+  volume = {10},
+  number = {2},
+  pages = {021403},
+  year = {2023},
+  issn = {1931-9401},
+  doi = {10.1063/5.0138913},
+  selected = {true},
+  preview = {ETAL-Frame.webp},
+  html = {https://doi.org/10.1063/5.0138913},
+  arxiv = {2211.07881},
+  author = {Hengrui Zhang and Wei Chen and James M. Rondinelli and Wei Chen},
+  abstract = {Growing materials data and data-driven informatics drastically promote the discovery and design of materials. While there are significant advancements in data-driven models, the quality of data resources is less studied despite its huge impact on model performance. In this work, we focus on data bias arising from uneven coverage of materials families in existing knowledge. Observing different diversities among crystal systems in common materials databases, we propose an information entropy-based metric for measuring this bias. To mitigate the bias, we develop an entropy-targeted active learning (ET-AL) framework, which guides the acquisition of new data to improve the diversity of underrepresented crystal systems. We demonstrate the capability of ET-AL for bias mitigation and the resulting improvement in downstream machine learning models. This approach is broadly applicable to data-driven materials discovery, including autonomous data acquisition and dataset trimming to reduce bias, as well as data-driven informatics in other scientific domains.}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true}
+
+@article{uaml,
+  title = {Uncertainty-aware mixed-variable machine learning for materials design},
+  journal = {Scientific Reports},
+  volume = {12},
+  pages = {19760},
+  year = {2022},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-022-23431-2},
+  preview = {UAML-BO.webp},
+  html = {https://www.nature.com/articles/s41598-022-23431-2},
+  pdf = {https://www.nature.com/articles/s41598-022-23431-2.pdf},
+  author = {Hengrui Zhang and Wei Chen and Akshay Iyer and Daniel W. Apley and Wei Chen},
+  abstract = {Data-driven design shows the promise of accelerating materials discovery but is challenging due to the prohibitive cost of searching the vast design space of chemistry, structure, and synthesis methods. Bayesian Optimization (BO) employs uncertainty-aware machine learning models to select promising designs to evaluate, hence reducing the cost. However, BO with mixed numerical and categorical variables, which is of particular interest in materials design, has not been well studied. In this work, we survey frequentist and Bayesian approaches to uncertainty quantification of machine learning with mixed variables. We then conduct a systematic comparative study of their performances in BO using a popular representative model from each group, the random forest-based Lolo model (frequentist) and the latent variable Gaussian process model (Bayesian). We examine the efficacy of the two models in the optimization of mathematical functions, as well as properties of structural and functional materials, where we observe performance differences as related to problem dimensionality and complexity. By investigating the machine learning models' predictive and uncertainty estimation capabilities, we provide interpretations of the observed performance differences. Our results provide practical guidance on choosing between frequentist and Bayesian uncertainty-aware machine learning models for mixed-variable BO in materials design.}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@article{cucrco,
+  title = {High-throughput investigation of structural evolution upon solid-state in Cu–Cr–Co combinatorial multilayer thin-film},
+  journal = {Materials & Design},
+  volume = {215},
+  pages = {110455},
+  year = {2022},
+  issn = {0264-1275},
+  doi = {10.1016/j.matdes.2022.110455},
+  preview = {CuCrCo.webp},
+  html = {https://www.sciencedirect.com/science/article/pii/S0264127522000764},
+  pdf = {https://www.sciencedirect.com/science/article/pii/S0264127522000764/pdfft?md5=0167cb6d37f739c2251913fe04aea4d0&pid=1-s2.0-S0264127522000764-main.pdf},
+  author = {Jian Hui and Qingyun Hu and Hengrui Zhang and Jie Zhao and Yuxi Luo and Yang Ren and Zhan Zhang and Hong Wang},
+  abstract = {Cu–Cr–Co combinatorial multilayer thin-films were prepared by a high-throughput ion beam sputtering system. Based on the thickness ratio among the individual nanoscale monolayers (Cu, Cr, Co), the resulting stoichiometry covered the entire phase diagram. The chemical composition and structure of Cu–Cr–Co combinatorial chip upon solid-state reaction were studied by lab-based micro-X-ray fluorescence (μ-XRF) and high-throughput synchrotron X-ray diffraction (XRD), respectively. A composition-structure map for Cu–Cr–Co combinatorial chip was developed through automated data analysis employing hierarchical clustering techniques. The structural evolution of Cu–Cr–Co combinatorial chip as a function of heat-treatment temperature, time, and modulation period were studied systematically. Furthermore, the effect of the elemental distribution in-depth direction was investigated to gain more insights regarding phase transformation. This work provides an efficient method and new perspectives for the design and optimization of the composition and structure of high-performance thin-films.}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{tinicu,
+  author = {Hui, Jian and Ma, Haiqian and Wu, Zheyu and Zhang, Zhan and Ren, Yang and Zhang, Hengrui and Zhang, Lanting and Wang, Hong},
+  title = {High-throughput investigation of crystal-to-glass transformation of Ti–Ni–Cu ternary alloy},
+  journal = {Scientific Reports},
+  volume = {9},
+  number = {1},
+  pages = {19932},
+  ISSN = {2045-2322},
+  DOI = {10.1038/s41598-019-56129-z},
+  preview = {NiTiCu.webp},
+  html = {https://www.nature.com/articles/s41598-019-56129-z},
+  pdf = {https://www.nature.com/articles/s41598-019-56129-z.pdf},
+  year = {2019},
+  abstract = {A high-throughput investigation of metallic glass formation via solid-state reaction was reported in this paper. Combinatorial multilayered thin-film chips covering the entire Ti–Ni–Cu ternary system were prepared using ion beam sputtering technique. Microbeam synchrotron X-ray diffraction (XRD) and X-ray fluorescence (XRF) measurements were conducted, with 1,325 data points collected from each chip, to map out the composition and the phase constitution before and after annealing at 373 K for 110 hours. The composition dependence of the crystal-to-glass transition by solid-state reaction was surveyed using this approach. The resulting composition–phase map is consistent with previously reported results. Time-of-flight secondary ion mass spectroscopy (ToF-SIMS) was performed on the representative compositions to determine the inter-diffusion between layers, the result shows that the diffusion of Ti is the key factor for the crystal-to-glass transition. In addition, both layer thickness and layer sequence play important roles as well. This work demonstrates that combinatorial chip technique is an efficient way for systematic and rapid study of crystal-to-glass transition for multi-component alloy systems.}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{agcu,
+  title = {Investigation of synchrotron X-ray induced oxidation of Ag–Cu thin-film},
+  journal = {Materials Letters},
+  volume = {272},
+  pages = {127843},
+  year = {2020},
+  issn = {0167-577X},
+  doi = {10.1016/j.matlet.2020.127843},
+  preview = {AgCu.webp},
+  html = {https://www.sciencedirect.com/science/article/pii/S0167577X20305486},
+  author = {Jian Hui and Hengrui Zhang and Qingyun Hu and Zhan Zhang and Yang Ren and Lanting Zhang and Hong Wang},
+  keywords = {Thin-film, Irradiated, Synchrotron X-ray, Oxidation.},
+  abstract = {Combinatorial Ag–Cu thin-films were irradiated by synchrotron X-ray in air to investigate the beam damage on the surface of the thin-film. The main effect was found to be oxidation with the oxidation state primarily depending on film composition: CuO formed on the pure Cu film, whereas Cu2O formed in the presence of Ag. Meanwhile, formation of crystalline Ag2O2 was favored and preferentially in the Ag-rich area. These results are of great importance in studying the oxidation of noble metal nano-film, and in the characterization of nano-films using synchrotron X-ray.}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{jdxb,
+  author = {Zhang, Hengrui},
+  title = {Demand-driven materials design},
+  publisher = {Journal of Shanghai Jiao Tong University},
+  year = {2021},
+  journal = {Journal of Shanghai Jiao Tong University},
+  volume = {55},
+  number = {Sup.1},
+  eid = {93},
+  numpages = {1},
+  pages = {93},
+  preview = {AIinMSE.webp},
+  keywords = {materials science, engineering design, data-driven, advanced manufacturing},
+  html = {http://xuebao.sjtu.edu.cn/CN/10.16183/j.cnki.jsjtu.2021.S1.001},
+  doi = {10.16183/j.cnki.jsjtu.2021.S1.001},
+  abstract = {Emerging paradigms provide a promising solution to current challenges faced by materials science and engineering. In this paper, the progress in materials genome engineering is reviewed, and its facilitation of the materials design is disscussed. Based on the computational and data-driven methodologies, materials could be integrated into the engineering design cycle to realize demand-driven materials design, so as to accelerate the discovery and application of materials.}
 }
