--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,17 @@
 ---
 ---
+@article{molsets,
+  title = {Learning molecular mixture property using chemistry-aware graph neural network},
+  author = {Hengrui Zhang and Tianxing Lai and Jie Chen and Arumugam Manthiram and James M. Rondinelli and Wei Chen},
+  journal = {PRX Energy},
+  note = {(In press)},
+  year = {2024},
+  selected={true},
+  arxiv = {2312.16473},
+  preview = {MolSets.webp},
+  abstract = {Recent advances in machine learning (ML) have expedited materials discovery and design. One significant challenge faced in ML for materials is the expansive combinatorial space of potential materials formed by diverse constituents and their flexible configurations. This complexity is particularly evident in molecular mixtures, a frequently explored space for materials such as battery electrolytes. Owing to the complex structures of molecules and the sequence-independent nature of mixtures, conventional ML methods have difficulties in modeling such systems. Here we present MolSets, a specialized ML model for molecular mixtures. Representing individual molecules as graphs and their mixture as a set, MolSets leverages a graph neural network and the deep sets architecture to extract information at the molecule level and aggregate it at the mixture level, thus addressing local complexity while retaining global flexibility. We demonstrate the efficacy of MolSets in predicting the conductivity of lithium battery electrolytes and highlight its benefits in virtual screening of the combinatorial chemical space.}
+}
+
 @article{wjm-bo,
 author = {Chaney, Lindsay E. and {van Beek}, Anton and Downing, Julia R. and Zhang, Jinrui and Zhang, Hengrui and Hui, Janan and Sorensen, E. Alexander and Khalaj, Maryam and Dunn, Jennifer B. and Chen, Wei and Hersam, Mark C.},
 title = {Bayesian optimization of environmentally sustainable graphene inks produced by wet jet milling},
