--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{LESets,
+  title = {Do graph neural networks work for high-entropy alloys?},
+  author = {Hengrui Zhang and Ruishu Huang and Jie Chen and James M. Rondinelli and Wei Chen},
+  journal = {arXiv preprint},
+  year = {2024},
+  selected={false},
+  arxiv = {2408.16337},
+  preview = {LESets.webp},
+  abstract = {Graph neural networks (GNNs) have excelled in predictive modeling for both crystals and molecules, owing to the expressiveness of graph representations. High-entropy alloys (HEAs), however, lack chemical long-range order, limiting the applicability of current graph representations. To overcome this challenge, we propose a representation of HEAs as a collection of local environment (LE) graphs. Based on this representation, we introduce the LESets machine learning model, an accurate, interpretable GNN for HEA property prediction. We demonstrate the accuracy of LESets in modeling the mechanical properties of quaternary HEAs. Through analyses and interpretation, we further extract insights into the modeling and design of HEAs. In a broader sense, LESets extends the potential applicability of GNNs to disordered materials with combinatorial complexity formed by diverse constituents and their flexible configurations.}
+}
+
 @article{upnet-bo,
   title = {Adaptive catalyst discovery using multicriteria Bayesian optimization with representation learning},
   author = {Jie Chen and Pengfei Ou and Yuxin Chang and Hengrui Zhang and Xiao-Yan Li and Edward H. Sargent and Wei Chen},
