--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -3,7 +3,7 @@
 
 @inproceedings{cl-fault,
   author = {Zhang, Hengrui and Wang, Bingnan},
-  title = {Supervised Contrastive Learning for Electric Motor Bearing Fault Detection},
+  title = {Supervised contrastive learning for electric motor bearing fault detection},
   booktitle = {International Conference on Electrical Machines},
   year = {2024},
   selected = {false},
