--- a/_bibliography/conference.bib
+++ b/_bibliography/conference.bib
@@ -7,7 +7,7 @@
   booktitle = {International Conference on Electrical Machines},
   year = {2024},
   selected = {false},
-  html = {https://www.merl.com/publications/TR2024-120},
+  html = {https://doi.org/10.1109/ICEM60801.2024.10700325},
   pdf = {https://www.merl.com/publications/docs/TR2024-120.pdf},
   preview = {cl-fault.webp},
   abstract = {Various faults can cause electric machine failures, causing downtime and asset losses. Fault detection technologies are highly desirable in the industry to predict and prevent such failures. Recent advances in machine learning have enabled data- driven models that identify faults from signals monitored in the motors. However, those signals could be complex and the features that indicate faults are subtle. Therefore, effective methods for extracting informative features relevant to faults from signals are desired. In this paper, we explore the use of contrastive learning in the detection of bearing faults from phase current signals. We develop a model architecture consisting of two parts, a feature extractor and a classifier, where the feature extractor is pre-trained using supervised contrastive learning. Tested on the Paderborn University bearing fault dataset, our model attains a high fault classification accuracy of 87%, which outperforms the conventional machine learning models. We also perform ablation tests to demonstrate the importance of contrastive learning- based training in this model. By investigating the classification results and extracted features of the models, we further verify the effectiveness of contrastive learning in extracting features that distinguish different classes. We anticipate that contrastive learning can lay the foundation of more accurate fault detection models and be extended to other practical fault detection tasks.}
