--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,19 @@
 ---
 ---
+@article{graphsim,
+  title = {High-entropy alloy electrocatalysts screened using machine learning informed by quantum-inspired similarity analysis},
+  author = {Chang, Yuxin and Benlolo, Ian and Bai, Yang and Reimer, Christoff and Zhou, Daojin and Zhang, Hengrui and Matsumura, Hidetoshi and Choubisa, Hitarth and Li, Xiao-Yan and Chen, Wei and Ou, Pengfei and Tamblyn, Isaac and Sargent, Edward H.},
+  journal = {Matter},
+  year = {2024},
+  pages = {},
+  volume = {},
+  number = {},
+  preview = {GraphSim.webp},
+  html = {https://doi.org/10.1016/j.matt.2024.10.001},
+  pdf = {},
+  abstract = {The discovery of new electrocatalysts can be aided by density functional theory (DFT) computation of overpotentials based on the energies of chemical intermediates on prospective adsorption sites. We hypothesize that when training a machine learning model on DFT data, one could improve accuracy by introducing a quantitative measure of similarity among adsorption sites. When we augment a graph neural network-based machine learning workflow using similarity as an input feature, we find that the required training dataset size is decreased from 1,600 to 800, leading to a 2× acceleration: the number of DFT calculations required to train to a given level of accuracy is cut in half. This approach identifies Fe<sub>0.125</sub>Co<sub>0.125</sub>Ni<sub>0.229</sub>Ir<sub>0.229</sub>Ru<sub>0.292</sub> as a promising oxygen reduction reaction catalyst with an overpotential of 0.24 V, outperforming a Pt/C benchmark. We examine, by studying experimentally four additional HEAs, the predictive power of the computational approach.}
+}
+
 @article{molsets,
   title = {Learning molecular mixture property using chemistry-aware graph neural network},
   author = {Hengrui Zhang and Tianxing Lai and Jie Chen and Arumugam Manthiram and James M. Rondinelli and Wei Chen},
