--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -57,6 +57,20 @@ abstract = {Abstract Liquid phase exfoliation (LPE) of graphene is a potentially
   abstract = {A bottleneck in high-throughput nanomaterials discovery is the pace at which new materials can be structurally characterized. Although current machine learning (ML) methods show promise for the automated processing of electron diffraction patterns (DPs), they fail in high-throughput experiments where DPs are collected from crystals with random orientations. Inspired by the human decision-making process, a framework for automated crystal system classification from DPs with arbitrary orientations was developed. A convolutional neural network was trained using evidential deep learning, and the predictive uncertainties were quantified and leveraged to fuse multiview predictions. Using vector map representations of DPs, the framework achieves a testing accuracy of 0.94 in the examples considered, is robust to noise, and retains remarkable accuracy using experimental data. This work highlights the ability of ML to be used to accelerate experimental high-throughput materials data analytics.}
 }
 
+@article{mofml-mm,
+  title = {Automated crystal system identification from electron diffraction patterns using multiview opinion fusion machine learning},
+  author = {Carolin B. Wahl and Jie Chen and Hengrui Zhang and Wei Liu and Shengtong Zhang and Jiezhong Wu and Chad A. Mirkin and Vinayak P. Dravid and Daniel W. Apley and Wei Chen},
+  journal = {Microscopy and Microanalysis},
+  volume = {29},
+  number = {Supplement_1},
+  pages = {1883–1884},
+  year = {2023},
+  doi = {10.1093/micmic/ozad067.972},
+  preview = {MOF-ML.webp},
+  html = {https://doi.org/10.1093/micmic/ozad067.972},
+  pdf = {https://academic.oup.com/mam/article-pdf/29/Supplement_1/1883/50934932/ozad067.972.pdf}
+}
+
 @article{et-al,
   title = {ET-AL: Entropy-targeted active learning for bias mitigation in materials data},
   journal = {Applied Physics Reviews},
