--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -58,7 +58,7 @@ abstract = {Abstract Liquid phase exfoliation (LPE) of graphene is a potentially
 }
 
 @article{mofml-mm,
-  title = {Automated crystal system identification from electron diffraction patterns using multiview opinion fusion machine learning},
+  title = {Automated crystal system identification from four-dimensional scanning transmission electron microscopy data using brain-inspired artificial intelligence},
   author = {Carolin B. Wahl and Jie Chen and Hengrui Zhang and Wei Liu and Shengtong Zhang and Jiezhong Wu and Chad A. Mirkin and Vinayak P. Dravid and Daniel W. Apley and Wei Chen},
   journal = {Microscopy and Microanalysis},
   volume = {29},
@@ -66,7 +66,7 @@ abstract = {Abstract Liquid phase exfoliation (LPE) of graphene is a potentially
   pages = {1883–1884},
   year = {2023},
   doi = {10.1093/micmic/ozad067.972},
-  preview = {MOF-ML.webp},
+  preview = {MOF-ML-MM.webp},
   html = {https://doi.org/10.1093/micmic/ozad067.972},
   pdf = {https://academic.oup.com/mam/article-pdf/29/Supplement_1/1883/50934932/ozad067.972.pdf}
 }
