--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,7 @@ pages = {2309579},
 html = {https://doi.org/10.1002/smll.202309579},
 pdf = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/smll.202309579},
 preview = {wjm-bo.webp},
-abstract = {Abstract Liquid phase exfoliation (LPE) of graphene is a potentially scalable method to produce conductive graphene inks for printed electronic applications. Among LPE methods, wet jet milling (WJM) is an emerging approach that uses high-speed, turbulent flow to exfoliate graphene nanoplatelets from graphite in a continuous flow manner. Unlike prior WJM work based on toxic, high-boiling-point solvents such as n-methyl-2-pyrollidone (NMP), this study uses the environmentally friendly solvent ethanol and the polymer stabilizer ethyl cellulose (EC). Bayesian optimization and iterative batch sampling are employed to guide the exploration of the experimental phase space (namely, concentrations of graphite and EC in ethanol) in order to identify the Pareto frontier that simultaneously optimizes three performance criteria (graphene yield, conversion rate, and film conductivity). This data-driven strategy identifies vastly different optimal WJM conditions compared to literature precedent, including an optimal loading of 15 wt% graphite in ethanol compared to 1 wt% graphite in NMP. These WJM conditions provide superlative graphene production rates of 3.2 g hr<sup>-1</sup> with the resulting graphene nanoplatelets being suitable for screen-printed micro-supercapacitors. Finally, life cycle assessment reveals that ethanol-based WJM graphene exfoliation presents distinct environmental sustainability advantages for greenhouse gas emissions, fossil fuel consumption, and toxicity.}
+abstract = {Liquid phase exfoliation (LPE) of graphene is a potentially scalable method to produce conductive graphene inks for printed electronic applications. Among LPE methods, wet jet milling (WJM) is an emerging approach that uses high-speed, turbulent flow to exfoliate graphene nanoplatelets from graphite in a continuous flow manner. Unlike prior WJM work based on toxic, high-boiling-point solvents such as n-methyl-2-pyrollidone (NMP), this study uses the environmentally friendly solvent ethanol and the polymer stabilizer ethyl cellulose (EC). Bayesian optimization and iterative batch sampling are employed to guide the exploration of the experimental phase space (namely, concentrations of graphite and EC in ethanol) in order to identify the Pareto frontier that simultaneously optimizes three performance criteria (graphene yield, conversion rate, and film conductivity). This data-driven strategy identifies vastly different optimal WJM conditions compared to literature precedent, including an optimal loading of 15 wt% graphite in ethanol compared to 1 wt% graphite in NMP. These WJM conditions provide superlative graphene production rates of 3.2 g hr<sup>-1</sup> with the resulting graphene nanoplatelets being suitable for screen-printed micro-supercapacitors. Finally, life cycle assessment reveals that ethanol-based WJM graphene exfoliation presents distinct environmental sustainability advantages for greenhouse gas emissions, fossil fuel consumption, and toxicity.}
 }
 
 @article{mofml,
