--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@article{LESets,
+  title = {Graph representation of local environments for learning high-entropy alloy properties},
+  author = {Hengrui Zhang and Ruishu Huang and Jie Chen and James M. Rondinelli and Wei Chen},
+  journal = {Machine Learning: Science and Technology},
+  year = {2025},
+  selected={false},
+  preview = {LESets.webp},
+  html = {https://doi.org/10.1088/2632-2153/adc0e1},
+  abstract = {Graph neural networks (GNNs) have excelled in predictive modeling for both crystals and molecules, owing to the expressiveness of graph representations. High-entropy alloys (HEAs), however, lack chemical long-range order, limiting the applicability of current graph representations. To overcome this challenge, we propose a representation of HEAs as a collection of local environment (LE) graphs. Based on this representation, we introduce the LESets machine learning model, an accurate, interpretable GNN for HEA property prediction. We demonstrate the accuracy of LESets in modeling the mechanical properties of quaternary HEAs. Through analyses and interpretation, we further extract insights into the modeling and design of HEAs. In a broader sense, LESets extends the potential applicability of GNNs to disordered materials with combinatorial complexity formed by diverse constituents and their flexible configurations.}
+}
+
 @article{graphsim,
   title = {High-entropy alloy electrocatalysts screened using machine learning informed by quantum-inspired similarity analysis},
   author = {Chang, Yuxin and Benlolo, Ian and Bai, Yang and Reimer, Christoff and Zhou, Daojin and Zhang, Hengrui and Matsumura, Hidetoshi and Choubisa, Hitarth and Li, Xiao-Yan and Chen, Wei and Ou, Pengfei and Tamblyn, Isaac and Sargent, Edward H.},
