--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@article{arpae-frame,
+  title = {Emerging microelectronic materials by design: Navigating combinatorial design space with scarce and dispersed data},
+  author = {Zhang, Hengrui and Georgescu, Alexandru B. and Yerramilli, Suraj and Karpovich, Christopher and Apley, Daniel W. and Olivetti, Elsa A. and Rondinelli, James M. and Chen, Wei},
+  journal = {Accounts of Materials Research},
+  arxiv = {2412.17283},
+  year = {2025},
+  selected = {true},
+  preview = {ARPAE.webp},
+  abstract = {The increasing demands of sustainable energy, electronics, and biomedical applications call for next-generation functional materials with unprecedented properties. Of particular interest are emerging materials that display exceptional physical properties, making them promising candidates in energy-efficient microelectronic devices. As the conventional Edisonian approach becomes significantly outpaced by growing societal needs, emerging computational modeling and machine learning (ML) methods are employed for the rational design of materials. However, the complex physical mechanisms, cost of first-principles calculations, and the dispersity and scarcity of data pose challenges to both physics-based and data-driven materials modeling. Moreover, the combinatorial composition-structure design space is high-dimensional and often disjoint, making design optimization nontrivial. In this Account, we review a team effort toward establishing a framework that integrates data-driven and physics-based methods to address these challenges and accelerate materials design. We begin by presenting our integrated materials design framework and its three components in a general context. We then provide an example of applying this materials design framework to metal-insulator transition (MIT) materials, a specific type of emerging materials with practical importance in next-generation memory technologies. We identify multiple new materials which may display this property and propose pathways for their synthesis. Finally, we identify some outstanding challenges in data-driven materials design, such as materials data quality issues and property-performance mismatch. We seek to raise awareness of these overlooked issues hindering materials design, thus stimulating efforts toward developing methods to mitigate the gaps.},
+}
+
 @article{LESets,
   title = {Graph representation of local environments for learning high-entropy alloy properties},
   author = {Hengrui Zhang and Ruishu Huang and Jie Chen and James M. Rondinelli and Wei Chen},
@@ -66,7 +77,6 @@ abstract = {Liquid phase exfoliation (LPE) of graphene is a potentially scalable
   pages = {e2309240120},
   year = {2023},
   doi = {10.1073/pnas.2309240120},
-  selected = {true},
   preview = {MOF-ML.webp},
   html = {https://www.pnas.org/doi/abs/10.1073/pnas.2309240120},
   abstract = {A bottleneck in high-throughput nanomaterials discovery is the pace at which new materials can be structurally characterized. Although current machine learning (ML) methods show promise for the automated processing of electron diffraction patterns (DPs), they fail in high-throughput experiments where DPs are collected from crystals with random orientations. Inspired by the human decision-making process, a framework for automated crystal system classification from DPs with arbitrary orientations was developed. A convolutional neural network was trained using evidential deep learning, and the predictive uncertainties were quantified and leveraged to fuse multiview predictions. Using vector map representations of DPs, the framework achieves a testing accuracy of 0.94 in the examples considered, is robust to noise, and retains remarkable accuracy using experimental data. This work highlights the ability of ML to be used to accelerate experimental high-throughput materials data analytics.}
