--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
   title = {Emerging microelectronic materials by design: Navigating combinatorial design space with scarce and dispersed data},
   author = {Zhang, Hengrui and Georgescu, Alexandru B. and Yerramilli, Suraj and Karpovich, Christopher and Apley, Daniel W. and Olivetti, Elsa A. and Rondinelli, James M. and Chen, Wei},
   journal = {Accounts of Materials Research},
-  arxiv = {2412.17283},
+  html = {https://doi.org/10.1021/accountsmr.5c00011},
   year = {2025},
   selected = {true},
   preview = {ARPAE.webp},
@@ -108,7 +108,7 @@ abstract = {Liquid phase exfoliation (LPE) of graphene is a potentially scalable
   selected = {true},
   preview = {ETAL-Frame.webp},
   html = {https://doi.org/10.1063/5.0138913},
-  arxiv = {2211.07881},
+  pdf = {https://pubs.aip.org/aip/apr/article-pdf/doi/10.1063/5.0138913/16827405/021403_1_5.0138913.pdf},
   author = {Hengrui Zhang and Wei Chen and James M. Rondinelli and Wei Chen},
   abstract = {Growing materials data and data-driven informatics drastically promote the discovery and design of materials. While there are significant advancements in data-driven models, the quality of data resources is less studied despite its huge impact on model performance. In this work, we focus on data bias arising from uneven coverage of materials families in existing knowledge. Observing different diversities among crystal systems in common materials databases, we propose an information entropy-based metric for measuring this bias. To mitigate the bias, we develop an entropy-targeted active learning (ET-AL) framework, which guides the acquisition of new data to improve the diversity of underrepresented crystal systems. We demonstrate the capability of ET-AL for bias mitigation and the resulting improvement in downstream machine learning models. This approach is broadly applicable to data-driven materials discovery, including autonomous data acquisition and dataset trimming to reduce bias, as well as data-driven informatics in other scientific domains.}
 }
