--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -1,6 +1,6 @@
 ---
 ---
-@article{upnet-bo,
+@article{upnet-cat,
   title = {Adaptive catalyst discovery using multicriteria Bayesian optimization with representation learning},
   author = {Jie Chen and Pengfei Ou and Yuxin Chang and Hengrui Zhang and Xiao-Yan Li and Edward H. Sargent and Wei Chen},
   journal = {arXiv preprint},
