--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,9 @@
   title = {Emerging microelectronic materials by design: Navigating combinatorial design space with scarce and dispersed data},
   author = {Zhang, Hengrui and Georgescu, Alexandru B. and Yerramilli, Suraj and Karpovich, Christopher and Apley, Daniel W. and Olivetti, Elsa A. and Rondinelli, James M. and Chen, Wei},
   journal = {Accounts of Materials Research},
+  volume = {6},
+  number = {6},
+  pages = {730-741},
   html = {https://doi.org/10.1021/accountsmr.5c00011},
   year = {2025},
   selected = {true},
