--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,17 @@
   abstract = {The increasing demands of sustainable energy, electronics, and biomedical applications call for next-generation functional materials with unprecedented properties. Of particular interest are emerging materials that display exceptional physical properties, making them promising candidates in energy-efficient microelectronic devices. As the conventional Edisonian approach becomes significantly outpaced by growing societal needs, emerging computational modeling and machine learning (ML) methods are employed for the rational design of materials. However, the complex physical mechanisms, cost of first-principles calculations, and the dispersity and scarcity of data pose challenges to both physics-based and data-driven materials modeling. Moreover, the combinatorial composition-structure design space is high-dimensional and often disjoint, making design optimization nontrivial. In this Account, we review a team effort toward establishing a framework that integrates data-driven and physics-based methods to address these challenges and accelerate materials design. We begin by presenting our integrated materials design framework and its three components in a general context. We then provide an example of applying this materials design framework to metal-insulator transition (MIT) materials, a specific type of emerging materials with practical importance in next-generation memory technologies. We identify multiple new materials which may display this property and propose pathways for their synthesis. Finally, we identify some outstanding challenges in data-driven materials design, such as materials data quality issues and property-performance mismatch. We seek to raise awareness of these overlooked issues hindering materials design, thus stimulating efforts toward developing methods to mitigate the gaps.},
 }
 
+@article{upnet-cat,
+  title = {Materials discovery using uncertainty-aware constrained Bayesian optimization with representation learning of high-dimensional inputs},
+  author = {Jie Chen and Pengfei Ou and Yuxin Chang and Hengrui Zhang and Xiao-Yan Li and Edward H. Sargent and Wei Chen},
+  journal = {Journal of Mechanical Design},
+  year = {2025},
+  selected={false},
+  arxiv = {2404.12445},
+  preview = {UPNet.webp},
+  abstract = {High-dimensional structure and composition spaces pose a fundamental challenge in materials discovery due to the lack of efficient approaches for navigating the vast and complex design space. Although machine learning (ML) has aided materials discovery, most existing ML models lack the ability to quantify epistemic uncertainty arising from limited data. Developing this capability is particularly challenging for tasks involving high-dimensional design representations, such as atomic structures. In this study, building on the Bayesian Optimization (BO) framework, we propose an uncertainty-aware atomistic machine learning model, UPNet, which enables automated representation learning directly from high-dimensional design inputs, such as atomic structures, and achieves principled uncertainty quantification through the use of Spectral-normalized Neural Gaussian Process (SNGP). By utilizing a constrained expected improvement acquisition function, our BO framework simultaneously considers multiple design criteria. We demonstrate the effectiveness of our approach in two materials discovery case studies: (1) identifying catalysts for the CO<sub>2</sub> reduction reaction and (2) designing transparent conducting materials. The results show that our approach achieves high prediction accuracy, facilitates interpretable feature extraction, and enables multicriteria material design using constrained BO, leading to a significant reduction of computing power and time (a 10x reduction in required simulation calculations). Beyond the demonstration examples, the developed method can accelerate materials discovery for various other applications with high-dimensional design inputs and expensive physics-based simulations.}
+}
+
 @article{LESets,
   title = {Graph representation of local environments for learning high-entropy alloy properties},
   author = {Hengrui Zhang and Ruishu Huang and Jie Chen and James M. Rondinelli and Wei Chen},
